<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title" android:layout_height="match_parent" android:layout_width="match_parent">



    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_topics_default"
        android:entries="@array/settings_topics_labels"
        android:entryValues="@array/settings_topics_values"
        android:key="@string/settings_topics_key"
        android:title="@string/settings_topics_label" />
</PreferenceScreen>